syntax = "proto3";
package Combat;

// Events
message PlayerJoined {
    string playerId = 1;
    string playerName = 2;
    int32 health = 3;
}

message PlayerShot {
    string shooterId = 1;
    string targetId = 2;
    bool hit = 3;
    int32 targetHealth = 4;
}

message PlayerDied {
    string playerId = 1;
    string killedBy = 2;
}

message TurnComplete {
    string playerId = 1;
    int32 nextPlayerIndex = 2;
}

message GameOver {
    string winnerId = 1;
    string winnerName = 2;
}

message GameStarted {
    repeated string playerOrder = 1;
}

// RPC Messages
message ShootRequest {
    string shooterId = 1;
}

message ShootResponse {
    bool hit = 1;
    int32 remainingHealth = 2;
}

message InitiateGameRequest {
    repeated string playerOrder = 1;
    int32 myIndex = 2;
}

message InitiateGameResponse {
    bool success = 1;
}

message GetStatusRequest {}

message GetStatusResponse {
    string playerId = 1;
    string playerName = 2;
    int32 health = 3;
    bool alive = 4;
}

// Each player service implements this
service Player {
    rpc shoot(ShootRequest) returns(ShootResponse);
    rpc initiateGame(InitiateGameRequest) returns(InitiateGameResponse);
    rpc getStatus(GetStatusRequest) returns(GetStatusResponse);
}
